src/styles/formInput.module.css
.input { 
    width: 100%;
    padding: 12px 27px;
    border-radius: 50px;
    border: 2px solid #BBD7DC;
    font-size: 14px;
}

.input:focus {
    outline: none;
    border-color: #04D2FC;
}

.inputLabel-g {
    position: absolute;
    transform: translateY(-50%);
    margin-left: 27px;
    color: #87A3A8;
}

.inputLabel {
    composes: inputLabel-g;
    top: 50%;
    font-size: 16px;
    pointer-events: none;
}

.input:focus ~ .inputLabelOnFocus {
    color: #04D2FC;
}

.inputLabelOnFocus {
    composes: inputLabel-g;
    top: 0;
    padding: 0 6px;
    font-size: 13px;
    font-weight: 600;
    background-color: white;
    transition: all .2s ease-out;
}

.inputWrapper {
    position: relative;
}

.inputWrapper:not(:last-child) {
    margin-bottom: 30px;
}

.inputError {
    margin: 5px 0;
    font-size: 12px;
    color: rgb(248, 50, 50);
}

.tooltip {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1;
    width: fit-content;
    padding: 3px 6px; 
    margin-top: 8px;
    background-color: black;
    border-radius: 10px;
    font-size: 12px;
    color: white;
    text-align: center;
}

.tooltip.show {
    display: block;
    animation: fade 1.2s 1.5s ease-out forwards;
}

.tooltip.hide {
    display: none;
}

@keyframes fade{
    0% {
        opacity: 100%;
    }

    100% {
        opacity: 0%;
        display: none;
    }
}

